[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/spritesheets/monster_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/spritesheets/monster_dash.png" type="Texture" id=2]
[ext_resource path="res://assets/spritesheets/monster_run.png" type="Texture" id=3]
[ext_resource path="res://game/entities/Enemy.gd" type="Script" id=4]
[ext_resource path="res://game/entities/EntityHitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/entities/EntityHurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/entities/EntityInformation.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/entities/InterpolatedBar.tscn" type="PackedScene" id=8]

[sub_resource type="SphereShape" id=15]
radius = 1.00982

[sub_resource type="AtlasTexture" id=1]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 3
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 3
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 3
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 3
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 3
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 4 ), SubResource( 3 ), SubResource( 5 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape" id=14]
radius = 0.0315256
height = 0.0244159

[sub_resource type="Animation" id=16]
resource_name = "Damage Flash"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:shaded")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:shaded")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Enemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 4 )
dash_threshold = 0.2
collision_impulse = 3

[node name="SeekArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SeekArea"]
shape = SubResource( 15 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0 )
shaded = true
frames = SubResource( 13 )
animation = "walk"
frame = 3
playing = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 14 )

[node name="EntityHitBox" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.0442956, 0, 0, 0, 0.0272091, 0, 0, 0, 0.0391359, 0, 0, 0 )
collision_layer = 2
collision_mask = 0

[node name="EntityHurtBox" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.0537994, 0, 0, 0, 0.0589834, 0, 0, 0, 0.0624316, 0, 0, 0 )
collision_layer = 0
collision_mask = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Damage Flash" = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="EntityInformation" parent="." instance=ExtResource( 7 )]
max_health = 5
health = 5

[node name="HealthBar" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.104687, 0, 0, 0, 0.167409, 0, 0, 0, 1, 0, 0.0744068, 0 )

[connection signal="body_entered" from="SeekArea" to="." method="_on_SeekArea_body_entered"]
[connection signal="body_exited" from="SeekArea" to="." method="_on_SeekArea_body_exited"]
[connection signal="area_entered" from="EntityHitBox" to="." method="_on_EntityHitBox_area_entered"]
[connection signal="dead" from="EntityInformation" to="." method="_on_EntityInformation_dead"]
[connection signal="health_changed" from="EntityInformation" to="." method="_on_EntityInformation_health_changed"]
